--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <title>Dress Mera - Virtual Outfit Preview</title>
   <meta name="description" content="Try outfits online with Dress Mera. Drag, zoom, and preview outfits virtually with face detection.">
   <meta name="keywords" content="virtual dressing room, try clothes online, outfit preview, Dress Mera">
-  <meta property="og:title" content="Dress Mera - Virtual Outfit Preview">
-  <meta property="og:description" content="Try outfits virtually with drag, zoom, and face detection.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,8 +28,8 @@
 
     <section class="outfits">
       <h2>Select Outfit</h2>
-      <img src="assets/outfits/outfit1.png" class="outfit" draggable="true">
-      <img src="assets/outfits/outfit2.png" class="outfit" draggable="true">
+      <img src="assets/outfits/outfit1.png" class="outfit" draggable="true" width="120">
+      <img src="assets/outfits/outfit2.png" class="outfit" draggable="true" width="120">
     </section>
   </main>
 
